atualização area admin
remoção da administração de imagens para entrada na pasta local

--- a/LanchesMac/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <!--fim menu grafico-->
-                    <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminImagens" asp-action="Index">Gerenciar Imagens</a>
+                    <!--<a class="nav-link text-light" asp-area="Admin" asp-controller="AdminImagens" asp-action="Index">Gerenciar Imagens</a>-->
                 </div>
             </div>
         </nav>
